po: update po/pl_PL/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pl_PL/pledge.po
+++ b/po/pl_PL/pledge.po
@@ -13,8 +13,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -54,11 +54,11 @@ msgid "Pledge Payment Status"
 msgstr "Status zadeklarowanych płatności "
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
+msgid "%1 - due on %2 (overdue)"
 msgstr ""
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
+msgid "%1 - due on %2"
 msgstr ""
 
 #: CRM/Pledge/BAO/PledgeBlock.php
@@ -83,14 +83,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Częstotliwość deklarowanych wpłat"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "Status zobowiązania %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "Status zadeklarowanej płatności 1%"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "Testowa deklaracja płatności"
 
@@ -101,6 +93,10 @@ msgstr ""
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Strona finansowa - 1%"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -150,10 +146,6 @@ msgstr "Data modyfikacji zadeklarowanej wpłaty"
 msgid "Pledge Cancelled Date"
 msgstr "Data anulowania deklarowanej wpłaty"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "Wpłata honorowego użykownika"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Maksymalna liczba przypomnień"
@@ -192,12 +184,12 @@ msgid "Reminders Sent"
 msgstr "Wysłane przypomnienia"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Edytuj harmonogram deklarowanych wpłat"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "Harmonogram zadeklarowanych płatności został zaktualizowany."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Zadeklaruj przed"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -304,6 +296,10 @@ msgid "Pledger Name or Email"
 msgstr "Nazwisko lub e-mail osoby deklarującej "
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr ""
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Znajdź deklarowane kwoty"
 
@@ -312,12 +308,11 @@ msgid "Delete Pledges"
 msgstr "Usuń zobowiązanie"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Skasuj deklarowane kwoty: 1%"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Suma wybranych deklaracji: %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -326,6 +321,30 @@ msgstr "Drukuj listę deklaracji"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "Mechanizm deklarowania płatności CiviCRM"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr ""
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr ""
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr ""
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr ""
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr ""
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Skasuj deklaracje"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -343,11 +362,11 @@ msgid ""
 "pledge payments."
 msgstr "Anulowanie tej płatności spowoduje anulowanie wszystkich zaplanowanych (niedokonanych) płatności."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Zobacz deklarowaną kwotę"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Edytuj deklaracje"
 
@@ -355,7 +374,7 @@ msgstr "Edytuj deklaracje"
 msgid "Cancel Pledge"
 msgstr "Anuluj deklaracje"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Skasuj deklaracje"
 
@@ -376,20 +395,12 @@ msgid "Pledge Search"
 msgstr "Szukaj deklaracji"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Drukuj deklarowane kwoty"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Eksportuj deklarowane kwoty"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Edytuj harmonogram deklarowanych wpłat"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Planowana data deklarowanej płatności"
+msgid "Adjust scheduled amount"
+msgstr ""
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -398,10 +409,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Nie będzie można wysłać potwierdzenia dla tej deklaracji płatności, ponieważ nie ma adresu e-mail zapisanego dla tego kontaktu. Jeśli chcesz, żeby potwierdzenie zostało wysłane, gdy deklaracja zostanie zarejestrowana, kliknij przycisk Anuluj, a następnie kliknij przycisk Edytuj na stronie Podsumowania, aby dodać adres e-mail przed zapisaniem deklarowanej płatności."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Nowa deklaracja"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -418,6 +425,10 @@ msgid ""
 msgstr "Rozważ anulowanie deklarowanej wpłaty jeśli chcesz utrzymać ścieżkę audytu i uniknąć utraty danych płatności. Aby ustawić status deklarowanej wpłaty na Anulowany i anulowanie wszelkich niewypłaconych deklarowanych płatności, najpierw kliknij przycisk Anuluj w tym formularzu. Następnie kliknij łącze więcej>  i wybierz akcję Anuluj."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Zadeklaruj przed"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -425,6 +436,7 @@ msgid ""
 msgstr "Łączna deklarowana kwota zmieniła się w wyniku dostosowań płatności. Pierwotna deklarowana kwota  wynosiła 1%."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "Raty"
 
@@ -447,10 +459,6 @@ msgstr "Data pierwszej deklarowanej płatności."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "Wysłać automatyczne potwierdzenie płatności 1%?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Wyślij automatyczne potwierdzenie płatności do "
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -476,20 +484,12 @@ msgstr "Deklarowane wpłaty są \"oczekujące\", aż pierwsza wpłata zostanie d
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Kliknij przycisk OK, aby zapisać deklarowaną płatność i wysyłać potwierdzenie do % 1 teraz"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr ""
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Dokonaj deklaracji płatności przed"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "Raty"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "co"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -516,10 +516,6 @@ msgid "Payments Ended Date"
 msgstr "Data zakończenia płatności"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Nie znaleziono pasujących deklaracji płatności"
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -532,8 +528,16 @@ msgid ""
 msgstr "jeśli wyszukujesz w zakresie dat lub kwot, wybierz szerszy zakres wartości"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Kliknij 1% żeby zobaczyć deklarowane płatności"
+msgid "Click arrow to view pledge payments."
+msgstr "Kliknij strzałkę, aby wyświetlić płatności."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Pokaż płatności"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Ukryj płatności"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -553,10 +557,6 @@ msgstr "Do zapłacenia"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Początkowa data"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Deklaracja dokonana"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -607,20 +607,12 @@ msgid "Amount Paid"
 msgstr "Kwota wpłacona"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>Podgląd płatności</a>"
+msgid "Credit Card Payment"
+msgstr "Płatność Kartą Kredytową"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Zapisz płatność (czek, gotówka, przelew EFT ...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Dokonaj płatności kartą kredytową</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Edytuj harmonogram deklarowanych wpłat</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Edytuj zaplanowane płatności"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -640,9 +632,10 @@ msgstr "W celu wysłania przypomnień"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "Administrator witryny musi skonfigurować skrypt, który aktualizuje statusy deklarowanych płatności i wysyła przypomnienia (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr ""
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -662,13 +655,17 @@ msgstr "Wpłaty 1% otrzymane od początku."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Kliknij <a href='%1'> Dodaj deklaracje płatności </ a>, aby zapisać nową deklarowaną wpłatę otrzymaną od tego użytkownika."
+msgstr ""
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Nie dokonano jeszcze żadnych deklarowanych płatności przez tego użytkownika."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -794,95 +791,38 @@ msgstr "Dziękujemy za Twoje hojne wsparcie"
 msgid "Pledge Payment Reminder"
 msgstr "Przypomnienie deklarowanej płatności"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr ""
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr ""
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr ""
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr ""
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr ""
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Kliknij strzałkę, aby wyświetlić płatności."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Pokaż płatności"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Ukryj płatności"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Płatność Kartą Kredytową"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Edytuj zaplanowane płatności"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr ""
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
 msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
 msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
 msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
-
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
 msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
 msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
 msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
 msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
 msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Skasuj deklaracje"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
