--- a/po/pl_PL/menu.po
+++ b/po/pl_PL/menu.po
@@ -24,9 +24,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-19 14:59+0000\n"
-"Last-Translator: Piotr Kaczyński <www@skrzydla.lublin.pl>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -143,8 +143,8 @@ msgid "Case Activity"
 msgstr "Interakcje przypadku"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Raport przypadków"
+msgid "Case Activity Audit"
+msgstr "Audyt aktywności Przypadku"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -163,8 +163,8 @@ msgid "Assign to Another Client"
 msgstr "Przypisz do innego klienta"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Przypisz interakcję do przypadku"
+msgid "File on Case"
+msgstr "Przypisz do przypadku"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -188,10 +188,6 @@ msgstr "Stany przypadku"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Licznik nośników"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Zmień status interkacji"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -266,6 +262,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Typy finansowe"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Nowa Płatność"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -283,9 +283,15 @@ msgstr "Akceptowane karty płatnicze"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "Rodzaje \"darowizn w imieniu”"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Transakcje"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Stałe darowizny"
@@ -336,6 +342,23 @@ msgstr "Uzgadnianie księgowe transakcji"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Eksport zestawu transakcji"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Podgląd Płatności"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "Ustawienia modułu CiviContribute"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Faktura w formacie PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Faktura na e-mail"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -489,6 +512,11 @@ msgstr "Opcje wyszukiwania"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Preferencje daty"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Menu główne"
 
@@ -522,10 +550,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Harmonogram przypomnień"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "To nie powinno być nigdy widoczne"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -543,6 +567,11 @@ msgstr "Formaty strony drukowania (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Opcje Stylu Komunikacji"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Formy grzecznościowe w e-mailach"
 
@@ -556,9 +585,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Formaty zwrotów grzecznościowych"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Języki, waluty, lokalizacja"
+msgid "Languages, Currency, Locations"
+msgstr "Język, waluta, lokalizacja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -709,10 +739,6 @@ msgid "Administer CiviCRM"
 msgstr "Zarządzanie CiviCRM-em"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Wartości opcji"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Zestawy cen"
 
@@ -780,10 +806,6 @@ msgstr "Budowanie wyszukiwania"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Niestandardowe wyszukiwania"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Wyszukiwanie proste"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -875,6 +897,10 @@ msgid "CiviCRM Blog"
 msgstr "CiviCRM Blog"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Wtyczka z przypadkami"
 
@@ -929,6 +955,10 @@ msgid "Import Activities"
 msgstr "Importuj interakcje"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Importuj niestandardowe dane wielowartościowe"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Aktualizuj CiviCRM"
 
@@ -965,12 +995,16 @@ msgid "Browse Uploaded files"
 msgstr "Przeglądaj wysłane pliki"
 
 msgctxt "menu"
-msgid "Delete file"
-msgstr "Usuń plik"
+msgid "Delete File"
+msgstr "Usuń Plik"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Wyloguj"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "API CiviCRM'a"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -984,6 +1018,10 @@ msgstr "QUnit"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "Edytor profili"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Potwierdź daty"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1080,6 +1118,10 @@ msgid "Event Online Registration"
 msgstr "Rejestracja online na wydarzenie"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Powtórz Wydarzenie"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Sloty konferencyjne"
 
@@ -1113,6 +1155,10 @@ msgstr "Usuń z koszyka"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Zobacz koszyk"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Zmień opcje rejestracji"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1167,8 +1213,8 @@ msgid "Resubscribe"
 msgstr "Zapisz ponownie"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Odmowa przyjmowania e-maili"
+msgid "Opt-out"
+msgstr "Rezygnacja"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1303,6 +1349,11 @@ msgstr "Wykaz raportów"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "Nowości ze świata CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1441,6 +1492,16 @@ msgstr "Szukaj wysyłek SMS"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Nowy test A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "Zarządzaj testem A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Raporty członkostwa"
 
@@ -1546,11 +1607,6 @@ msgstr "Lokalizacja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Język, waluta, lokalizacja"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Opcje preferowanego języka"
 
@@ -1568,6 +1624,11 @@ msgstr "Uprawnienia (kontrola dostepu)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Ustawienia systemu"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1636,6 +1697,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Stan Dotacji"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1646,8 +1712,13 @@ msgstr "Wszystkie raporty"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Pomoc"
+msgid "Support"
+msgstr "Wsparcie"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr "Rozpocznij"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1656,18 +1727,43 @@ msgstr "Dokumentacja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Forum społeczności CiviCRM"
+msgid "Ask a question"
+msgstr "Zadaj pytanie"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Weź udział"
+msgid "Get expert help"
+msgstr "Zapytaj eksperta"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "O CiviCRMie"
+msgid "About CiviCRM"
+msgstr "O CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr "Zarejestruj stronę"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr "Dołącz do CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Programista"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "API Explorer"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Dokumentacja programisty"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1894,6 +1990,11 @@ msgstr "Dostarcza informacji o szczegółach transakcji dla wszystkich wpłat, s
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Dostarcza informacji o statusie powtarzających się transakcji"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Podsumowanie członkostwa"
 
@@ -2063,144 +2164,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Szczegółowy raport różnych rodzajów badań."
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Audyt aktywności Przypadku"
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
-msgstr "Nowa Płatność"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "Rodzaje \"darowizn w imieniu”"
-
-msgctxt "menu"
-msgid "View Payment"
-msgstr "Podgląd Płatności"
+msgid "System Status"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Opcje Stylu Komunikacji"
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Importuj niestandardowe dane wielowartościowe"
-
-msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Zmień opcje rejestracji"
+msgid "Components"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
-msgstr "Stan Dotacji"
+msgid "Extensions"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
-msgstr "Programista"
+msgid "Activity Details"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
-msgstr "API Explorer"
+msgid "Activity Summary"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Dokumentacja programisty"
-
-msgctxt "menu"
-msgid "File on Case"
-msgstr "Przypisz do przypadku"
+msgid "Shows activity statistics by type / date"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "Ustawienia modułu CiviContribute"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Faktura w formacie PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Faktura na e-mail"
+msgid "Pledge Detail"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Preferencje daty"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Usuń Plik"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "API CiviCRM'a"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Potwierdź daty"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Powtórz Wydarzenie"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Rezygnacja"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Nowy test A/B"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "Zarządzaj testem A/B"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr "Wsparcie"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr "Rozpocznij"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr "Zadaj pytanie"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr "Zapytaj eksperta"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "O CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr "Zarejestruj stronę"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr "Dołącz do CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Dostarcza informacji o statusie powtarzających się transakcji"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
