--- a/po/pt_BR/batch.po
+++ b/po/pt_BR/batch.po
@@ -9,9 +9,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-10-26 14:49+0000\n"
-"Last-Translator: Guilherme Brein <guilherme@fisesp.org.br>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,6 +34,10 @@ msgstr "Ver/Adicionar Transacões para Lote"
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Re-Abrir Lote"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -60,12 +64,52 @@ msgid "No export format selected."
 msgstr "Nenhum formato de exportação selecionado."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Dados Exportados"
+msgid "Batch ID"
+msgstr "ID de Lotes"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Número de itens"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Descrição do Lote"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Criado Por"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Data da Criação"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Modificado Por"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Data Última Modificação"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "Lote de Grupo Inteligente"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Lote Total"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Número de itens do Lote"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "Forma de Pagamento"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "Data Exportada"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "Data do Lote"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -84,6 +128,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Inserção de Dados em Lote para Filiações"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "Inserção de Dados em Lote para Contribuições"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "Ignorar Erros e Processar o Lote?"
 
@@ -92,16 +140,16 @@ msgid "Validate & Process the Batch"
 msgstr "Validar e Processar o Lote"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Alguns campos foram removidos"
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "O valor do crédito de reconhecimento não deve ser maior que o valor total."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "O Tipo de Filiação é um campo obrigatório."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "Você não pode registrar dois pagamentos para a mesma contribuição em um mesmo lote"
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -150,6 +198,10 @@ msgstr "Volume total esperado"
 msgid "Total amount entered"
 msgstr "Volume total inserido"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "Contribuições em Aberto (Data de Vencimento - Quantia)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "Lote de Inserção de Dados"
@@ -171,65 +223,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "Nenhum Lote de Inserção de Dados foi criado para este site."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "ID de Lotes"
+msgid "Batch Payment Method"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Título do Lote"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Descrição do Lote"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Criado Por"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Data da Criação"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Modificado Por"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Data Última Modificação"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "Lote de Grupo Inteligente"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Lote Total"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Número de itens do Lote"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "Forma de Pagamento"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "Data Exportada"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "Data do Lote"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "Inserção de Dados em Lote para Contribuições"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "Você não pode registrar dois pagamentos para a mesma contribuição em um mesmo lote"
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "Contribuições em Aberto (Data de Vencimento - Quantia)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr ""
