--- a/po/pt_BR/pcp.po
+++ b/po/pt_BR/pcp.po
@@ -11,8 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:06+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -37,6 +37,10 @@ msgstr "Editar Sua Página"
 msgid "Tell Friends"
 msgstr "Contar aos Amigos"
 
+#: CRM/PCP/BAO/PCP.php
+msgid "URL for this Page"
+msgstr "URL para esta página"
+
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
 msgstr "Atualizar Informações de Contato"
@@ -50,8 +54,8 @@ msgid "Approval required"
 msgstr "Aprovação requerida"
 
 #: CRM/PCP/BAO/PCP.php
-msgid "Supporter profile"
-msgstr "Perfil"
+msgid "Owner Email Notification"
+msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -71,15 +75,15 @@ msgstr "'Criar página da campanha pessoal' Link do texto"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This event registration is being made thanks to effort of "
+"This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr "Este registro de eventos está sendo feita graças ao esforço de <strong>%1 </ strong>, que apoia a nossa campanha."
+msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This contribution is being made thanks to effort of <strong>%1</strong>, who"
-" supports our campaign. "
-msgstr "Esta contribuição está sendo feito graças ao esforço de <strong>%1 </ strong>, que apoia a nossa campanha."
+"This contribution is being made thanks to the efforts of "
+"<strong>%1</strong>, who supports our campaign. "
+msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
@@ -155,6 +159,12 @@ msgid ""
 "is disabled. Please contact the site administrator if you need assistance."
 msgstr "Perfil de Suporte não está definido para esta campanha Página Pessoal ou o perfil está desativado. Entre em contato com o administrador do site , se você precisar de ajuda."
 
+#: CRM/PCP/BAO/PCP.php
+msgid ""
+"Owner Notification is not set for this Personal Campaign Page. Please "
+"contact the site administrator if you need assistance."
+msgstr ""
+
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
 msgstr "Identificação pessoal de Página de Campanha"
@@ -189,6 +199,10 @@ msgid "Target Entity Type"
 msgstr "Aponte Tipo de Entidade"
 
 #: CRM/PCP/DAO/PCPBlock.php
+msgid "Owner Notification"
+msgstr ""
+
+#: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
 msgstr "Limite do Contar aos Amigos"
 
@@ -203,6 +217,10 @@ msgstr "Estabelecer uma Página Pessoal de Campanha - Pisa 2"
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
 msgstr "Editar sua página pessoal de campanha "
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Welcome"
+msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -237,26 +255,16 @@ msgid "Honor Roll"
 msgstr "Roll de Honra"
 
 #: CRM/PCP/Form/Campaign.php
+msgid "Notify me via email when someone donates to my page"
+msgstr ""
+
+#: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
 msgstr "Quantia de meta deve ser um maior numérico de valor que zero. "
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
 msgstr "Texto de botão deve ser menos que 64 caráteres. "
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Your picture or image file cannot be larger than 360 x 360 pixels in size."
-msgstr "Seu quadro ou arquivo de imagem não podem ser maiores que 360 x 360 pixels em tamanho. "
-
-#: CRM/PCP/Form/Campaign.php
-msgid "The dimensions of the image you have selected are %1 x %2."
-msgstr "As dimensões da imagem que você selecionou são %1 x %2."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Please shrink or crop the file or find another smaller image and try again."
-msgstr "Por favor encolha ou tose o arquivo ou ache outra imagem menor e tentativa outra vez. "
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -362,10 +370,6 @@ msgstr "Página Ativada"
 msgid "Source Type"
 msgstr "Tipo de fonte"
 
-#: CRM/PCP/Form/PCP.php
-msgid "Event Page"
-msgstr "Página do evento"
-
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
@@ -440,6 +444,10 @@ msgid "Send emails inviting your friends to support your campaign!"
 msgstr "Enviar e-mails convidando seus amigos para apoiar a sua campanha!"
 
 #: CRM/PCP/Page/PCPInfo.php
+msgid "Copy this link to share directly with your network!"
+msgstr "Copie este link para compartilhar diretamente com a sua rede!"
+
+#: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
 msgstr "Atualize suas Informações pessoais de contato"
 
@@ -479,9 +487,15 @@ msgstr "O texto para o botão de contribuição ou registro."
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported your campaign. (People will"
-" have the option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Se esta opção estiver marcada, um \"quadro de honra\" será exibido com os nomes (ou apelido) das pessoas que apoiaram sua campanha. (As pessoas terão a opção de permanecer anônimo. Seus nomes não serão listados.)"
+"names (or nicknames) of the people who supported you. (Donors will have the "
+"option to remain anonymous. Their names will NOT be listed.)"
+msgstr "Se esta opção estiver marcada, um \"quadro de honra\" será exibido com os nomes (ou apelido) das pessoas que o apoiaram. (Os doadores terão a opção de permanecer anônimo. Seus nomes não serão listados.)"
+
+#: templates/CRM/PCP/Form/Campaign.tpl
+msgid ""
+"If this option is checked, you will receive an email notification when "
+"people contribute to your campaign."
+msgstr ""
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -491,10 +505,6 @@ msgid ""
 "Campaign Page are recorded as \"soft credits\" for the supporter who created"
 " that campaign page."
 msgstr "Quando páginas pessoais da campanha estão habilitadas, constituintes verá um link convidando-os a criar sua própria página de angariação de fundos depois de fazer uma contribuição. Contribuições de pessoas que entram através de uma página pessoal de campanha são registadas como \"créditos suaves\" para o torcedor que criou essa página de campanha."
-
-#: templates/CRM/PCP/Form/Contribute.hlp
-msgid "Approval"
-msgstr ""
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
@@ -730,6 +740,38 @@ msgstr "Visualizar Página"
 msgid "Linked to Contribution Page"
 msgstr "Ligada à Contribuição da Página"
 
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "You have received a donation at your personal page"
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Your fundraising total has been updated."
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's information is listed below.  You can choose to contact them and"
+" convey your thanks if you wish."
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's name has been added to your honor roll unless they asked not to "
+"be included."
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
+msgid "Someone has just donated to your personal campaign page"
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Personal Campaign Page Owner Notification"
+msgstr ""
+
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
@@ -762,9 +804,9 @@ msgstr "Vá para sua página"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
-"your page, tell friends, and update your contact info."
-msgstr "Quando você visualiza sua página de campanha, ENQUANTO esteja AUTENTICADO, a página incluirá links para editar sua página, contar aos amigos e atualizar suas informações de contato."
+"When you view your campaign page WHILE LOGGED IN, the page includes links to"
+" edit your page, tell friends, and update your contact info."
+msgstr ""
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -782,9 +824,10 @@ msgstr "Dúvidas? Envie um email para"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
-"Your personal campaign page has been reviewed. There were some issues with the content\n"
-"which prevented us from approving the page. We are sorry for any inconvenience."
-msgstr "Sua página campanha pessoal foi revisto. Houve alguns problemas com o conteúdo que nos impediu de aprovar a página. Pedimos desculpas por qualquer inconveniente."
+"Your personal campaign page has been reviewed. There were some issues with "
+"the content which prevented us from approving the page. We are sorry for any"
+" inconvenience."
+msgstr ""
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -879,102 +922,42 @@ msgstr "Clique ou cole este link em seu navegador e siga os procedimentos"
 msgid "Click or paste this link into your browser"
 msgstr "Clique ou cole este link em seu navegador"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "URL for this Page"
-msgstr "URL para esta página"
-
-#: CRM/PCP/Page/PCPInfo.php
-msgid "Copy this link to share directly with your network!"
-msgstr "Copie este link para compartilhar diretamente com a sua rede!"
-
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported you. (Donors will have the "
-"option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Se esta opção estiver marcada, um \"quadro de honra\" será exibido com os nomes (ou apelido) das pessoas que o apoiaram. (Os doadores terão a opção de permanecer anônimo. Seus nomes não serão listados.)"
-
-#: CRM/PCP/BAO/PCP.php
-msgid "Owner Email Notification"
+#: CRM/PCP/DAO/PCP.php
+msgid "PCP Block"
 msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This event registration is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
+#: CRM/PCP/DAO/PCP.php
+msgid "Use Thermometer?"
 msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This contribution is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
+#: CRM/PCP/DAO/PCP.php
+msgid "Show Honor Roll?"
 msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"Owner Notification is not set for this Personal Campaign Page. Please "
-"contact the site administrator if you need assistance."
+#: CRM/PCP/DAO/PCP.php
+msgid "Notify Owner?"
 msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
-msgid "Owner Notification"
+msgid "PCP Block ID"
 msgstr ""
 
-#: CRM/PCP/Form/Campaign.php
-msgid "Notify me via email when someone donates to my page"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity"
 msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, you will receive an email notification when "
-"people contribute to your campaign."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity ID"
 msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "You have received a donation at your personal page"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Approval Required?"
 msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Your fundraising total has been updated."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell a Friend Enabled?"
 msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's information is listed below.  You can choose to contact them and"
-" convey your thanks if you wish."
-msgstr ""
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's name has been added to your honor roll unless they asked not to "
-"be included."
-msgstr ""
-
-#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
-msgid "Someone has just donated to your personal campaign page"
-msgstr ""
-
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Personal Campaign Page Owner Notification"
-msgstr ""
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_html.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_text.tpl
-msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to"
-" edit your page, tell friends, and update your contact info."
-msgstr ""
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-msgid ""
-"Your personal campaign page has been reviewed. There were some issues with "
-"the content which prevented us from approving the page. We are sorry for any"
-" inconvenience."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell A Friend Limit"
 msgstr ""
