po: update po/pt_BR/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/menu.po
+++ b/po/pt_BR/menu.po
@@ -16,9 +16,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-13 23:52+0000\n"
-"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -135,8 +135,8 @@ msgid "Case Activity"
 msgstr "Atividade do Processo"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Relatório do Processo"
+msgid "Case Activity Audit"
+msgstr "Auditoria de Atividade do Processo"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -155,8 +155,8 @@ msgid "Assign to Another Client"
 msgstr "Atribuir a Outro Cliente"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Criar atividade para o processo"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -180,10 +180,6 @@ msgstr "Andamentos do Processo"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Meios de Contato"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Alterar Status da Atividade"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -258,6 +254,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Tipos Financeiros"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Novo Pagamento"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -275,9 +275,15 @@ msgstr "Cartões de crédito aceitos"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "Tipos de Crédito de Reconhecimento"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Contribuições"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Contribuições Recorrentes"
@@ -328,6 +334,23 @@ msgstr "Lotes de Contabilidade"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Exportação de Lotes de Contabilidade"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Ver Pagamento"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "Configurações do Componente CiviContribute"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Cobrança em PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Cobrança via Email"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -481,6 +504,11 @@ msgstr "Preferências de Busca"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Preferências de Data"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Menu Principal"
 
@@ -514,10 +542,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Lembretes Agendados"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Isso nunca deve ser visto"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -535,6 +559,11 @@ msgstr "Imprimir Página no Formato (PDF) "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Opções de Estilo de Comunicação"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Formato do E-mail de Cartões"
 
@@ -548,9 +577,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Formatos de Destinatário "
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Língua, Moeda, Localização"
+msgid "Languages, Currency, Locations"
+msgstr "Idiomas, Moeda, Localização"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -701,10 +731,6 @@ msgid "Administer CiviCRM"
 msgstr "Administrar CRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Valores de Opção"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Listas de Preços"
 
@@ -772,10 +798,6 @@ msgstr "Construtor de Pesquisas"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Pesquisas Personalizadas"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Pesquisa Simples"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -867,6 +889,10 @@ msgid "CiviCRM Blog"
 msgstr "CiviCRM Blog"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Componente de Painel de Processo"
 
@@ -921,6 +947,10 @@ msgid "Import Activities"
 msgstr "Importar Atividades"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Importar Dados Personalizados Multi-valor"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Atualizar CiviCRM"
 
@@ -957,12 +987,16 @@ msgid "Browse Uploaded files"
 msgstr "Navegador por arquivos enviados"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr "Excluir Arquivo"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Sair"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "API CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -976,6 +1010,10 @@ msgstr "QUnit"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "Editor de Perfil"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Confirmar datas"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1072,6 +1110,10 @@ msgid "Event Online Registration"
 msgstr "Inscrição Online do Evento"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Repetir Evento"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Vaga em Conferência"
 
@@ -1105,6 +1147,10 @@ msgstr "Remover do Carrinho"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Ver Carrinho"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Alterar Seleções de Registro"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1159,8 +1205,8 @@ msgid "Resubscribe"
 msgstr "Reinscrever-se"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Optar por Sair"
+msgid "Opt-out"
+msgstr "Opt-Out"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1295,6 +1341,11 @@ msgstr " Listagem de relatórios"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "Notícias CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1433,6 +1484,16 @@ msgstr "Encontrar SMS em Massa"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Novo Teste A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "Gerenciar Testes A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Relatórios de Filiação"
 
@@ -1538,11 +1599,6 @@ msgstr "Localização"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Idiomas, Moeda, Localização"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Opções de Preferência de Idioma"
 
@@ -1560,6 +1616,11 @@ msgstr "Permissões (Controle de Acesso)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Configurações do Sistema"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1628,6 +1689,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Status da Bolsa"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1638,8 +1704,13 @@ msgstr "Todos os relatórios"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Ajuda"
+msgid "Support"
+msgstr "Suporte"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr "Iniciar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1648,18 +1719,43 @@ msgstr "Documentação"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Fóruns"
+msgid "Ask a question"
+msgstr "Colocar uma questão"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Participar"
+msgid "Get expert help"
+msgstr "Obter ajuda de especialista"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Sobre"
+msgid "About CiviCRM"
+msgstr "Sobre CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr "Registar o seu site"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr "Junte-se à CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Desenvolvedor"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "Explorador da API"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Docs de Desenvolvimento"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1886,6 +1982,11 @@ msgstr "Fornece detalhes de transação para todas as contribuições e pagament
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Provê informação sobre a situação de contribuições recorrentes"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Resumo de Filiação"
 
@@ -2055,144 +2156,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Relatório detalhado para prospecção, fone-banking, listas de percurso ou outras pesquisas."
 
-msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Auditoria de Atividade do Processo"
-
-msgctxt "menu"
-msgid "New Payment"
-msgstr "Novo Pagamento"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "Tipos de Crédito de Reconhecimento"
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "View Payment"
-msgstr "Ver Pagamento"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Opções de Estilo de Comunicação"
+msgid "Configure CKEditor"
+msgstr ""
 
 msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Importar Dados Personalizados Multi-valor"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
 
 msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Alterar Seleções de Registro"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Grant Status"
-msgstr "Status da Bolsa"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer"
-msgstr "Desenvolvedor"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "API Explorer"
-msgstr "Explorador da API"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Docs de Desenvolvimento"
+msgid "Insert CiviCRM Content"
+msgstr ""
 
 msgctxt "menu"
-msgid "File on Case"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "Configurações do Componente CiviContribute"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Cobrança em PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Cobrança via Email"
+msgid "System Status"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Preferências de Data"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Excluir Arquivo"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "API CiviCRM"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Confirmar datas"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Repetir Evento"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Opt-Out"
+msgid "Components"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Novo Teste A/B"
+msgid "Extensions"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "Gerenciar Testes A/B"
+msgid "Activity Details"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Support"
-msgstr "Suporte"
+msgid "Activity Summary"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get started"
-msgstr "Iniciar"
+msgid "Shows activity statistics by type / date"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Ask a question"
-msgstr "Colocar uma questão"
+msgid "Pledge Detail"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get expert help"
-msgstr "Obter ajuda de especialista"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "Sobre CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr "Registar o seu site"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr "Junte-se à CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Provê informação sobre a situação de contribuições recorrentes"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
